--- a/templatexml/makefile
+++ b/templatexml/makefile
@@ -12,11 +12,17 @@ endef
 all: compile 
 
 camainconf.cpp: camainconf.xml
-	ca_qxmlc --verbose 7  camainconf.xml
-	@cp ./camainconf.cpp ../ca_libcake/src/.
-	@cp ./camainconf.h   ../ca_libcake/inc/.
+	ca_qxmlc --verbose 7  --addtest --out_path  ./mainconf   camainconf.xml
+	@cp ./mainconf/camainconf.cpp ../ca_libcake/src/.
+	@cp ./mainconf/camainconf.h   ../ca_libcake/inc/.
 
-compile: camainconf.cpp 
+
+calayerconf.cpp: calayerconf.xml	
+	ca_qxmlc --verbose 7  --addtest --out_path  ./layerconf   calayerconf.xml
+	@cp ./layerconf/calayerconf.cpp ../ca_libcake/src/.
+	@cp ./layerconf/calayerconf.h   ../ca_libcake/inc/.
+
+compile: camainconf.cpp calayerconf.cpp
 
 
 
@@ -24,8 +30,10 @@ compile: camainconf.cpp
 clean:
 	$(call remove_file , "../ca_libcake/src/camainconf.cpp")
 	$(call remove_file , "../ca_libcake/inc/camainconf.h")
-	$(call remove_file , "./camainconf.cpp")
-	$(call remove_file , "./camainconf.h")
+	$(call remove_file , "../ca_libcake/src/calayerconf.cpp")
+	$(call remove_file , "../ca_libcake/inc/calayerconf.h")
+	$(call remove_file , "./mainconf")
+	$(call remove_file , "./layerconf")
 
 
 
