--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.8.11)
-project (qxmlc)
+project (cake)
 set(CXX_STANDARD 14)
 set(CXX_STANDARD_REQUIRED YES)
 set(CXX_EXTENSIONS NO)
