change cmake generation to enable VScode compatibility on do_debug/release scripts

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project (cake)
 set(CXX_STANDARD 14)
 set(CXX_STANDARD_REQUIRED YES)
 set(CXX_EXTENSIONS NO)
+set(PROJECT_HOME ${CMAKE_SOURCE_DIR} )
 
 add_subdirectory (./ca_libcake)
 add_subdirectory (./ca_test)
