--- a/ca_test/CMakeLists.txt
+++ b/ca_test/CMakeLists.txt
@@ -29,7 +29,7 @@ target_link_libraries (ca_test_build pthread )
 add_custom_command (
     TARGET ca_test_build
     PRE_BUILD
-    COMMAND  ${CMAKE_CURRENT_SOURCE_DIR}/beauty.sh ${CMAKE_CURRENT_SOURCE_DIR}
+    COMMAND ${PROJECT_HOME}/beauty.sh ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
 
