--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CXX_STANDARD_REQUIRED YES)
 set(CXX_EXTENSIONS NO)
 set(PROJECT_HOME ${CMAKE_SOURCE_DIR} )
 
+add_subdirectory (./ca_packfile)
 add_subdirectory (./ca_libcake)
 add_subdirectory (./ca_test)
 add_subdirectory (./ca_cake)
