--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/Debuglinux64/ca_cake",
-            "args": ["--verbose" "7"  "/home/angelo/workspace/cake/repo_example/mainconf.xml" ],
+            "program": "${workspaceFolder}/Debuglinux64/ca_packfile",
+            "args": ["--out" "test"  "/home/angelo/workspace/cake/repo_example/*.xml" ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
